<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myfondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:contentDescription="@string/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/mylogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/app_name"
        android:textColor="@color/morado"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/myFrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/botonIniciar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="650dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/sesion"
            android:textColor="@color/white">
        </Button>

    </FrameLayout>
    <FrameLayout
        android:id="@+id/myFrameLayout2"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="@drawable/contenedor_redondo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="420dp"
        android:visibility="invisible">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:autofillHints="username"
            android:hint="@string/user"
            android:inputType="text"
            android:textColorHint="#17202A"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginTop="90dp"
            android:autofillHints="password"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="#17202A"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/botonIngresar"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            android:layout_marginTop="170dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/boton_redondo">
        </Button>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>